Added all syntax chapters up to and including '4.22 Trait Objects'

--- a/src/glossary.tex
+++ b/src/glossary.tex
@@ -5,7 +5,7 @@ unfamiliar.
 \label{sec:gloss_syntaxtree}
 
 When a compiler is compiling your program, it does a number of different things. One of the things that it does is turn 
-the text of your program into an ‘abstract syntax tree’, or ‘AST’. This tree is a representation of the structure of your 
+the text of your program into an 'abstract syntax tree', or 'AST'. This tree is a representation of the structure of your 
 program. For example, \code{2 + 3} can be turned into a tree:
 
 \begin{verbatim}
