--- a/standard.tex
+++ b/standard.tex
@@ -47,7 +47,8 @@
     
     \usemintedstyle{manni}
     \setminted[rust]{
-      breaklines,
+      breaklines=true,
+      samepage=false,
       fontsize=\footnotesize,
       tabsize=4,
       bgcolor=cverbbg,
