--- a/src/gettingstarted.tex
+++ b/src/gettingstarted.tex
@@ -1,15 +1,15 @@
-This first chapter of the book will get us going with Rust and its tooling. First, we’ll install Rust. Then, the classic 
-‘Hello World’ program. Finally, we’ll talk about Cargo, Rust’s build system and package manager.
+This first chapter of the book will get us going with Rust and its tooling. First, we'll install Rust. Then, the classic 
+'Hello World' program. Finally, we'll talk about Cargo, Rust's build system and package manager.
 
 \subsection{Installing Rust}
 
-The first step to using Rust is to install it. Generally speaking, you’ll need an Internet connection to run the commands in 
-this section, as we’ll be downloading Rust from the internet.
+The first step to using Rust is to install it. Generally speaking, you'll need an Internet connection to run the commands in 
+this section, as we'll be downloading Rust from the internet.
 
 \blank
 
-We’ll be showing off a number of commands using a terminal, and those lines all start with \code{\$}. We don't need to type in the 
-\code{\$}s, they are there to indicate the start of each command. We’ll see many tutorials and examples around the web that follow 
+We'll be showing off a number of commands using a terminal, and those lines all start with \code{\$}. We don't need to type in the 
+\code{\$}s, they are there to indicate the start of each command. We'll see many tutorials and examples around the web that follow 
 this convention: \code{\$} for commands run as our regular user, and \code{\#} for commands we should be running as an administrator.
 
 \subsubsection*{Platform support}
@@ -148,7 +148,7 @@ or by running this script again with the --uninstall flag.
 Continue? (y/N)
 \end{verbatim}
 
-From here, press \code{y} for ‘yes’, and then follow the rest of the prompts.
+From here, press \code{y} for 'yes', and then follow the rest of the prompts.
 
 \subsubsection*{Installing on Windows}
 
@@ -190,7 +190,7 @@ If not, there are a number of places where we can get help. The easiest is the
 \href{irc://irc.mozilla.org/\#rust}{\#rust IRC channel on irc.mozilla.org}, which we can access through
 \href{http://chat.mibbit.com/?server=irc.mozilla.org&channel=\%23rust}{Mibbit}. Click that link, and we'll be chatting with other 
 Rustaceans (a silly nickname we call ourselves) who can help us out. Other great resources include 
-\href{https://users.rust-lang.org/}{the user’s forum}, and \href{http://stackoverflow.com/questions/tagged/rust}{Stack Overflow}.
+\href{https://users.rust-lang.org/}{the user's forum}, and \href{http://stackoverflow.com/questions/tagged/rust}{Stack Overflow}.
 
 \blank
 
@@ -231,12 +231,12 @@ $ cd hello_world
 \end{verbatim}
 
 \begin{myquote}
-Note: If you’re on Windows and not using PowerShell, the ~ may not work. Consult the documentation for your shell for more details.
+Note: If you're on Windows and not using PowerShell, the ~ may not work. Consult the documentation for your shell for more details.
 \end{myquote}
 
 \subsubsection*{Writing and Running a Rust Program}
 
-Next, make a new source file and call it \emph{main.rs}. Rust files always end in a \emph{.rs} extension. If you’re using more 
+Next, make a new source file and call it \emph{main.rs}. Rust files always end in a \emph{.rs} extension. If you're using more 
 than one word in your filename, use an underscore to separate them; for example, you'd use \emph{hello\_world.rs} rather than 
 \emph{helloworld.rs}.
 
@@ -264,7 +264,7 @@ That makes you a Rust programmer! Welcome.
 
 \subsubsection*{Anatomy of a Rust Program}
 
-Now, let’s go over what just happened in your \enquote{Hello, world!} program in detail. Here's the first piece of the puzzle:
+Now, let's go over what just happened in your \enquote{Hello, world!} program in detail. Here's the first piece of the puzzle:
 
 \begin{rustc}
 fn main() {
@@ -273,8 +273,8 @@ fn main() {
 \end{rustc}
 
 These lines define a \emph{function} in Rust. The \code{main} function is special: it's the beginning of every Rust program. The 
-first line says, \enquote{I’m declaring a function named \code{main} that takes no arguments and returns nothing.} If there were 
-arguments, they would go inside the parentheses (\code{(} and \code{)}), and because we aren’t returning anything from this function, 
+first line says, \enquote{I'm declaring a function named \code{main} that takes no arguments and returns nothing.} If there were 
+arguments, they would go inside the parentheses (\code{(} and \code{)}), and because we aren't returning anything from this function, 
 we can omit the return type entirely.
 
 \blank
@@ -292,14 +292,14 @@ println!("Hello, world!");
 \end{rustc}
 
 This line does all of the work in this little program: it prints text to the screen. There are a number of details that are important 
-here. The first is that it’s indented with four spaces, not tabs.
+here. The first is that it's indented with four spaces, not tabs.
 
 \blank
 
 % TODO make macro a hyperref to the macro section
 The second important part is the \code{println!()} line. This is calling a Rust \emph{macro}, which is how metaprogramming is done 
 in Rust. If it were calling a function instead, it would look like this: \code{println()} (without the !). We'll discuss Rust macros 
-in more detail later, but for now you only need to know that when you see a \code{!} that means that you’re calling a macro 
+in more detail later, but for now you only need to know that when you see a \code{!} that means that you're calling a macro 
 instead of a normal function.
 
 \blank
@@ -370,19 +370,19 @@ to a tool called Cargo, which will help you write real-world Rust programs.
 
 \subsection{Hello, Cargo!}
 
-Cargo is Rust’s build system and package manager, and Rustaceans use Cargo to manage their Rust projects. Cargo manages 
+Cargo is Rust's build system and package manager, and Rustaceans use Cargo to manage their Rust projects. Cargo manages 
 three things: building your code, downloading the libraries your code depends on, and building those libraries. We call 
-libraries your code needs ‘dependencies’ since your code depends on them.
+libraries your code needs 'dependencies' since your code depends on them.
 
 \blank
 
-The simplest Rust programs don’t have any dependencies, so right now, you'd only use the first part of its functionality. 
-As you write more complex Rust programs, you’ll want to add dependencies, and if you start off using Cargo, that will be 
+The simplest Rust programs don't have any dependencies, so right now, you'd only use the first part of its functionality. 
+As you write more complex Rust programs, you'll want to add dependencies, and if you start off using Cargo, that will be 
 a lot easier to do.
 
 \blank
 
-As the vast, vast majority of Rust projects use Cargo, we will assume that you’re using it for the rest of the book. 
+As the vast, vast majority of Rust projects use Cargo, we will assume that you're using it for the rest of the book. 
 Cargo comes installed with Rust itself, if you used the official installers. If you installed Rust through some other 
 means, you can check if you have Cargo installed by typing:
 
@@ -390,12 +390,12 @@ means, you can check if you have Cargo installed by typing:
 $ cargo --version
 \end{verbatim}
 
-into a terminal. If you see a version number, great! If you see an error like ‘\code{command not found}’, then you should look 
+into a terminal. If you see a version number, great! If you see an error like '\code{command not found}', then you should look 
 at the documentation for the system in which you installed Rust, to determine if Cargo is separate.
 
 \subsubsection*{Converting to Cargo}
 
-Let’s convert the Hello World program to Cargo. To Cargo-fy a project, you need to do three things:
+Let's convert the Hello World program to Cargo. To Cargo-fy a project, you need to do three things:
 
 \begin{enumerate}
     \item{Put your source file in the right directory.}
@@ -442,7 +442,7 @@ Make sure to capitalize the \code{C} in \emph{Cargo.toml}, or Cargo won't know w
 \blank
 
 This file is in the \href{https://github.com/toml-lang/toml}{TOML} (Tom's Obvious, Minimal Language) format. TOML is similar 
-to INI, but has some extra goodies, and is used as Cargo’s configuration format.
+to INI, but has some extra goodies, and is used as Cargo's configuration format.
 
 \blank
 
@@ -457,7 +457,7 @@ authors = [ "Your name <you@example.com>" ]
 \end{verbatim}
 
 The first line, \code{[package]}, indicates that the following statements are configuring a package. As we add more information 
-to this file, we’ll add other sections, but for now, we only have the package configuration.
+to this file, we'll add other sections, but for now, we only have the package configuration.
 
 \blank
 
@@ -493,7 +493,7 @@ $ cargo run
 Hello, world!  
 \end{verbatim}
 
-Notice that this example didn’t re-build the project. Cargo figured out that the file hasn’t changed, and so it just 
+Notice that this example didn't re-build the project. Cargo figured out that the file hasn't changed, and so it just 
 ran the binary. If you'd modified your source code, Cargo would have rebuilt the project before running it, and you 
 would have seen something like this:
 
@@ -504,21 +504,21 @@ $ cargo run
 Hello, world!  
 \end{verbatim}
 
-Cargo checks to see if any of your project’s files have been modified, and only rebuilds your project if they’ve changed since 
+Cargo checks to see if any of your project's files have been modified, and only rebuilds your project if they've changed since 
 the last time you built it.
 
 \blank
 
 With simple projects, Cargo doesn't bring a whole lot over just using \code{rustc}, but it will become useful in future. This 
-is especially true when you start using crates; these are synonymous with a ‘library’ or ‘package’ in other programming languages. 
-For complex projects composed of multiple crates, it’s much easier to let Cargo coordinate the build. Using Cargo, you can run 
+is especially true when you start using crates; these are synonymous with a 'library' or 'package' in other programming languages. 
+For complex projects composed of multiple crates, it's much easier to let Cargo coordinate the build. Using Cargo, you can run 
 \code{cargo build}, and it should work the right way.
 
 \myparagraph{Building for Release}
 
 When your project is finally ready for release, you can use \code{cargo build --release} to compile your project with optimizations. 
 These optimizations make your Rust code run faster, but turning them on makes your program take longer to compile. This is why 
-there are two different profiles, one for development, and one for building the final program you’ll give to a user.
+there are two different profiles, one for development, and one for building the final program you'll give to a user.
 
 \blank
 
@@ -536,11 +536,11 @@ need to touch this file yourself; just let Cargo handle it.
 
 \blank
 
-That’s it! If you've been following along, you should have successfully built \code{hello\_world} with Cargo.
+That's it! If you've been following along, you should have successfully built \code{hello\_world} with Cargo.
 
 \blank
 
-Even though the project is simple, it now uses much of the real tooling you’ll use for the rest of your Rust career. 
+Even though the project is simple, it now uses much of the real tooling you'll use for the rest of your Rust career. 
 In fact, you can expect to start virtually all Rust projects with some variation on the following commands:
 
 \begin{verbatim}
@@ -551,7 +551,7 @@ $ cargo build
 
 \myparagraph{Making a new Cargo Project the Easy Way}
 
-You don’t have to go through that previous process every time you want to start a new project! Cargo can quickly make a 
+You don't have to go through that previous process every time you want to start a new project! Cargo can quickly make a 
 bare-bones project directory that you can start developing in right away.
 
 \blank
@@ -563,12 +563,12 @@ $ cargo new hello_world --bin
 \end{verbatim}
 
 This command passes \code{--bin} because the goal is to get straight to making an executable application, as opposed to a 
-library. Executables are often called binaries (as in \code{/usr/bin}, if you’re on a Unix system).
+library. Executables are often called binaries (as in \code{/usr/bin}, if you're on a Unix system).
 
 \blank
 
 Cargo has generated two files and one directory for us: a \code{Cargo.toml} and a \emph{src} directory with a \emph{main.rs}
-file inside. These should look familliar, they’re exactly what we created by hand, above.
+file inside. These should look familliar, they're exactly what we created by hand, above.
 
 \blank
 
@@ -588,7 +588,7 @@ repository.
 
 \blank
 
-Here’s what should be in \code{src/main.rs}:
+Here's what should be in \code{src/main.rs}:
 
 \begin{rustc}
 fn main() {
@@ -596,7 +596,7 @@ fn main() {
 }
 \end{rustc}
 
-Cargo has generated a \enquote{Hello World!} for you, and you’re ready to start coding!
+Cargo has generated a \enquote{Hello World!} for you, and you're ready to start coding!
 
 \begin{myquote}
 Note: If you want to look at Cargo in more detail, check out the official \href{http://doc.crates.io/guide.html}{Cargo guide}, 
@@ -606,11 +606,11 @@ which covers all of its features.
 \subsection{Closing Thoughts}
 
 This chapter covered the basics that will serve you well through the rest of this book, and the rest of your time with Rust. 
-Now that you’ve got the tools down, we'll cover more about the Rust language itself.
+Now that you've got the tools down, we'll cover more about the Rust language itself.
 
 \blank
 
 % TODO make syntax and semantics a hyperref
-You have two options: Dive into a project with ‘Learn Rust’, or start from the bottom and work your way up with 
-‘Syntax and Semantics’. More experienced systems programmers will probably prefer ‘Learn Rust’, while those from 
-dynamic backgrounds may enjoy either. Different people learn differently! Choose whatever’s right for you.
+You have two options: Dive into a project with 'Learn Rust', or start from the bottom and work your way up with 
+'Syntax and Semantics'. More experienced systems programmers will probably prefer 'Learn Rust', while those from 
+dynamic backgrounds may enjoy either. Different people learn differently! Choose whatever's right for you.
