--- a/src/introdcution.tex
+++ b/src/introdcution.tex
@@ -1,10 +1,10 @@
 Welcome! This book will teach you about the \href{https://www.rust-lang.org/}{Rust Programming Language}.
 Rust is a systems programming language focused on three goals: safety, speed, and concurrency. It maintains 
 these goals without having a garbage collector, making it a useful language for a number of use cases other 
-languages aren’t good at: embedding in other languages, programs with specific space and time requirements, 
+languages aren't good at: embedding in other languages, programs with specific space and time requirements, 
 and writing low-level code, like device drivers and operating systems. It improves on current languages targeting 
 this space by having a number of compile-time safety checks that produce no runtime overhead, while eliminating 
-all data races. Rust also aims to achieve ‘zero-cost abstractions’ even though some of these abstractions feel 
+all data races. Rust also aims to achieve 'zero-cost abstractions' even though some of these abstractions feel 
 like those of a high-level language. Even then, Rust still allows precise control like a low-level language would.
 
 \blank
@@ -15,7 +15,7 @@ like those of a high-level language. Even then, Rust still allows precise contro
     \item{\nameref{sec:tutorial} - Learn some Rust with a small project.}
     \item{\nameref{sec:syntax} - Each bit of Rust, broken down into small chunks.}
     \item{\nameref{sec:effective_rust} - Higher-level concepts for writing excellent Rust code.}
-    \item{\nameref{sec:nightly_rust} - Cutting-edge features that aren’t in stable builds yet.}
+    \item{\nameref{sec:nightly_rust} - Cutting-edge features that aren't in stable builds yet.}
     \item{\nameref{sec:glossary} - A reference of terms used in the book.}
     \item{\nameref{sec:bib} - Background on Rust's influences, papers about Rust.}
 \end{itemize}
