Added all chapters up to and including 'Macros'

--- a/src/syntax.tex
+++ b/src/syntax.tex
@@ -96,3 +96,51 @@ you can find it explained somewhere in here.
 \subsection{Trait Objects}
 \label{sec:syntax_traitObjects}
 \input{src/syntax/trait_objects.tex}
+
+\subsection{Closures}
+\label{sec:syntax_closures}
+\input{src/syntax/closures.tex}
+
+\subsection{Universal Function Call Syntax}
+\label{sec:syntax_universalFunctionCallSyntax}
+\input{src/syntax/universal_function_call_syntax.tex}
+
+\subsection{Crates and Modules}
+\label{sec:syntax_cratesAndModules}
+\input{src/syntax/crates_and_modules.tex}
+
+\subsection{'const' and 'static'}
+\label{sec:syntax_constAndStatic}
+\input{src/syntax/const_and_static.tex}
+
+\subsection{Attributes}
+\label{sec:syntax_attributes}
+\input{src/syntax/attributes.tex}
+
+\subsection{'type' Aliases}
+\label{sec:syntax_typeAliases}
+\input{src/syntax/type_aliases.tex}
+
+\subsection{Casting Between Types}
+\label{sec:syntax_casting}
+\input{src/syntax/casting.tex}
+
+\subsection{Associated Types}
+\label{sec:syntax_associatedTypes}
+\input{src/syntax/assoc_types.tex}
+
+\subsection{Unsized Types}
+\label{sec:syntax_unsizedTypes}
+\input{src/syntax/unsized_types.tex}
+
+\subsection{Operators and Overloading}
+\label{sec:syntax_operatorsAndOverloading}
+\input{src/syntax/operators_and_overloading.tex}
+
+\subsection{'Deref' coercions}
+\label{sec:syntax_derefCoercions}
+\input{src/syntax/deref_coercions.tex}
+
+\subsection{Macros}
+\label{sec:syntax_macros}
+\input{src/syntax/macros.tex}
