--- a/src/syntax/structs.tex
+++ b/src/syntax/structs.tex
@@ -137,6 +137,7 @@ let point = Point3d { z: 1, x: 2, .. origin };
 \end{rustc}
 
 \subsubsection*{Tuple structs}
+\label{paragraph:tuple_structs}
 
 % TODO make tuple a reference
 Rust has another data type that's like a hybrid between a tuple and a \struct, called a 'tuple struct'. Tuple structs have a name, 
