--- a/standard.tex
+++ b/standard.tex
@@ -1,6 +1,6 @@
 % !TeX program = XeLaTeX
 % !TeX encoding = UTF-8
-\documentclass[fontsize=12pt]{scrartcl}
+\documentclass[fontsize=11pt]{scrartcl}
 
 \usepackage[USenglish]{babel}
 \usepackage{xunicode}
@@ -63,7 +63,7 @@
     {\end{minted}
      \vspace{0.5em}}
     
-    \newcommand{\code}[1]{\texttt{\textcolor{red!60!black}{#1}}}
+    \newcommand{\code}[1]{\texttt{\small \textcolor{red!60!black}{#1}}}
     \newcommand{\blank}{\vspace{\baselineskip}}
     \newcommand{\myparagraph}[1]{\paragraph{#1}\mbox{}\\}
     
