Added more chapters (up to and including 'Concurrency')

--- a/src/syntax.tex
+++ b/src/syntax.tex
@@ -144,3 +144,11 @@ you can find it explained somewhere in here.
 \subsection{Macros}
 \label{sec:syntax_macros}
 \input{src/syntax/macros.tex}
+
+\subsection{Raw Pointers}
+\label{sec:syntax_rawPointers}
+\input{src/syntax/raw_pointers.tex}
+
+\subsection{Unsafe}
+\label{sec:syntax_unsafe}
+\input{src/syntax/unsafe.tex}
