--- a/src/syntax/const_and_static.tex
+++ b/src/syntax/const_and_static.tex
@@ -13,6 +13,7 @@ is because they're effectively inlined to each place that they're used. Referenc
 to refer to the same memory address for this reason.
 
 \subsubsection*{\code{static}}
+\label{paragraph:static}
 
 Rust provides a 'global variable' sort of facility in static items. They're similar to constants, but static items aren't inlined upon 
 use. This means that there is only one instance for each value, and it's at a fixed location in memory.
