--- a/standard.tex
+++ b/standard.tex
@@ -38,6 +38,7 @@
     \setsansfont{Liberation Sans}
     \setmonofont{Source Code Pro}
 
+    \renewcommand{\arraystretch}{1.4}
     \renewenvironment{verbatim}
     {\VerbatimEnvironment
      \begin{mdframed}[backgroundcolor=cverbbg,topline=false,bottomline=false,rightline=false,leftline=false]
@@ -119,6 +120,7 @@
     \pagebreak
     \section{Effective Rust}
     \label{sec:effective_rust}
+    \input{src/effective_rust.tex}
     
     \pagebreak
     \section{Nightly Rust}
